# CharB0T

./: .cfduplication.yml  .codeclimate.yml  .coverage  .deepsource.toml  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .sourcery.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CharB0T.py  CharB0T2.py  Gemfile  Kethran.py  KethranToken.json  LICENSE  README.md  Script.py  TTSBot.py  Test2.json  UBCOBot.py  _config.yml  authorized_user.json  auxone.py  changelog.md  codecov.yml  completed.sfs  contact.md  credentials.json  crowdin.yml  db_to_json.py  details.json  dev-requirements.txt  discordBot.py  edit.py  (+41 more)
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions-rs/: grcov.yml
.github/workflows/: black.yml  build-test.yml  ci.yml  clippy.yml  codecov.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  greetings.yml  leaderboard.yml  lint.yml  pylint.yml  pyright.yml  reuse.yml
LICENSES/: MIT.txt
_data/: gangs.yml  links.yml  users.json
_layouts/: default.html
_posts/: 2022-05-16-welcome-to-jekyll.markdown  2022-05-22-giveaway-error-postmortem.md  2022-05-25-why.md
assets/css/: leaderboard.css
char2ext/: primary.py
charbot/: TODO.txt  __init__.py  __main__.py  admin.py  advent.py  bot.py  calendar.py  card.py  changelog.md  constants.py  dice.py  events.py  gcal.py  giveaway.py  giveaways.py  hangman_words.csv  levels.py  main.py  mod_support.py  playlists.py  pools.py  primary.py  programs.py  query.py  reputation_admin.py  shrugman.py  stocks.py  sudoku.py  tictactoe.py  translator.py  xcom.py  xcom_helpers.py
charbot/_sudoku/: __init__.py  block.py  column.py  puzzle.py  view.py
charbot/_tictactoe/: abstract.py  easy.py  hard.py  view.py
charbot/betas/: __init__.py  _types.py  banner.py  cog.py  models.py
charbot/betas/views/: __init__.py  banner.py
charbot/errors/: __init__.py  channel.py  pools.py  roles.py
charbot/games/: cog.py
charbot/gangs/: README.MD  __init__.py  _types.py  banner.py  cog.py  dues.py  enums.py  models.py  shakedowns.py  types.py  utils.py
charbot/giveaway/: __init__.py  cog.py  modal.py  view.py
charbot/minesweeper/: __init__.py  board.py  enums.py  errors.py  game.py  modals.py  tile.py  view.py
charbot/programs/: __init__.py  cog.py  minesweeper.py  rtictactoe.py  tictactoe.py
charbot/rust/: __init__.py  _rust.pyi
charbot/shrugman/: __init__.py  modal.py  view.py
charbot/sudoku/: block.py  cell.py  column.py  row.py  view.py
charbot/tictactoe/: __init__.py  abstract.py  easy.py  hard.py  view.py
charbot/types/: __init__.py  bot.py
charbot/xcfp/: COPYING  __init__.py  character.py  parser.py  pool.py  property_set.py
charbot2/: main.py  primary.py
charbot_rust/: .gitignore  Cargo.toml  LICENSE  pyproject.toml
charbot_rust/charbot_rust/: __init__.py  charbot_rust.pyi  minesweeper.pyi  tictactoe.pyi
charbot_rust/charbot_rust/minesweeper/: __init__.py
charbot_rust/charbot_rust/tictactoe/: __init__.py  enums.py
charbot_rust/python/charbot_rust/: __init__.py  charbot_rust.pyi  minesweeper.pyi  tictactoe.pyi
charbot_rust/python/charbot_rust/minesweeper/: __init__.py  __init__.pyi
charbot_rust/python/charbot_rust/tictactoe/: __init__.py  __init__.pyi  enums.py
charbot_rust/src/: fluent.rs  lib.rs  main.rs  minesweeper.rs  points.rs  tictactoe.rs
charbot_rust/src/fluent/: bundle.rs  common.rs  translator.rs
charbot_rust/src/fluent/i18n/en-US/: dice.ftl  errors.ftl  giveaway.ftl  levels.ftl  minesweeper.ftl  programs.ftl
charbot_rust/src/fluent/i18n/es-ES/: errors.ftl  giveaway.ftl  levels.ftl  minesweeper.ftl  programs.ftl
charbot_rust/src/fluent/i18n/fr/: dice.ftl  errors.ftl  giveaway.ftl  levels.ftl  minesweeper.ftl  programs.ftl
charbot_rust/src/fluent/i18n/nl/: dice.ftl  errors.ftl  giveaway.ftl  levels.ftl  minesweeper.ftl  programs.ftl
charbot_rust/src/minesweeper/: common.rs  field.rs  game.rs
charbot_rust/src/tictactoe/: board.rs  player.rs
charbot_rust/src/tictactoe/player/: human_player.rs  minimax_player.rs  random_player.rs
docs/: _config.yml  admin.md  calendar.md  database.md  dice.md  events.md  giveaway.md  mod_support.md  pools.md  programs.md  query.md
docs/_posts/: 2022-05-16-welcome-to-jekyll.markdown
documentation/: admin.md
extensions/: __auxone.py  __button_test.py  __economy_beta.py  __generating.py  __help.py  __investing.py  __ksp.py  __rpo.py  __test1.py  admin.py  dice.py  economy_beta.py  events.py  generating.py  help.py  invest.py  investing.py  ksp.py  legacy_admin  mod_support.py  modmail.py  query.py  rpo.py  test1.py
helpers/: roller.py
i18n/en-US/: dice.ftl  errors.ftl  giveaway.ftl  levels.ftl  minesweeper.ftl  programs.ftl
i18n/es-ES/: dice.ftl  errors.ftl  giveaway.ftl  levels.ftl  minesweeper.ftl  programs.ftl
i18n/fr/: dice.ftl  errors.ftl  giveaway.ftl  levels.ftl  minesweeper.ftl  programs.ftl
i18n/nl/: dice.ftl  errors.ftl  giveaway.ftl  levels.ftl  minesweeper.ftl  programs.ftl
i18n/no/: dice.ftl  errors.ftl  giveaway.ftl  levels.ftl  minesweeper.ftl  programs.ftl
i18n/sv-SE/: dice.ftl  errors.ftl  giveaway.ftl  levels.ftl  minesweeper.ftl  programs.ftl
kethext/: primary.py
kethran/: main.py  primary.py
src/: lib.rs  main.rs  minesweeper.rs  points.rs  tictactoe.rs
src/minesweeper/: field.rs  labels  tiles
src/tictactoe/: player.rs
tests/charbot/: conftest.py  skipped_test_giveaway.py  test_banners.py  test_bot.py  test_card.py  test_dice.py  test_dues.py  test_dunders.py  test_errors.py  test_events.py  test_games.py  test_gang_actions.py  test_gang_inventory.py  test_gang_utils.py  test_gangs.py  test_gcal.py  test_giveaway.py  test_item_utils.py  test_minesweeper.py  test_programs.py  test_query.py  test_raid.py  test_rtictactoe.py  test_shakedowns.py  test_shrugman.py  test_sudoku.py  test_tictactoe.py  test_translator.py  test_user_inventory.py  test_xcom.py
ubcobot/: admin.py  main.py
ubcoext/: admin.py
(+49 files in other folders)
