[package]
name = "charbot"
version = "1.5.1"
edition = "2024"

[package.metadata.maturin]
name = "_charbot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_charbot"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1" }
rand = "0.9.0"

[dev-dependencies]
yare = "3.0.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
