[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charbot"
description = "A simple Discord bot written in Python and Rust"
readme = "README.md"
version = "1.5.0"
authors = [
	{name = "Bluesy1", email = "68259537+Bluesy1@users.noreply.github.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Rust",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3 :: Only",
	"Typing :: Typed",
]
dependencies = [
	"aiohttp[speedups]==3.10.10",
	"asyncpg==0.30.0",
	"discord.py[speed] @ git+https://github.com/Rapptz/discord.py@425edd2e10b9be3d7799c0df0cd1d43a1a34654e",
	"disrank==0.0.2",
	"jishaku[procinfo] @ git+https://github.com/Gorialis/jishaku@664e009d80a3deea599a3bcea12be7b548b1ef34",
	"orjson==3.10.7",
	"Pillow==10.4.0",
	"pytesseract==0.3.13",
	"sentry-sdk==2.8.0",
	"typing-extensions==4.12.2",
	"urlextract==1.9.0",
	"uvloop==0.20.0 ; sys_platform != 'win32'",
	"validators==0.29.0",
]

[project.optional-dependencies]
dev = [
	"aioresponses==0.7.7",
	"asyncpg-stubs==0.30.0",
	"ruff==0.8.3",
	"maturin[zig]==1.7.4",
	"pre-commit==3.6.1",
	"pyright==1.1.361",
	"pytest==8.3.3",
	"pytest-asyncio==0.24.0",
	"pytest-cov==6.0.0",
	"pytest-mock==3.14.0",
	"toml==0.10.2",
]

[tool.pytest.ini_options]
minversion = "7.1.2"
asyncio_mode = "strict"
filterwarnings = [
	"error",
	"ignore::ResourceWarning",
	"ignore:'audioop' is deprecated and slated for removal in Python 3.13:DeprecationWarning",
	"ignore: module 'sre_constants' is deprecated:DeprecationWarning",
	"ignore:'pkgutil.find_loader' is deprecated and slated for removal in Python 3.14:DeprecationWarning"
]
addopts = "--cov-report=xml:coverage/reports/coverage.xml --cov=charbot tests/ --cov-report=term-missing:skip-covered --cov-config=pyproject.toml --cov-branch"

[tool.coverage.run]
omit = ["*/__main__.py", "*/tests/*.py", "*/types/*.py", "*/pools.py", "*/admin.py", "*/reputation_admin.py", "*/advent.py", "*/giveaway/*"]

[tool.pyright]
pythonPlatform = "Linux"
reportUnnecessaryTypeIgnoreComment = true
reportIncompatibleMethodOverride = false
exclude = ["**/__pycache__/**", "venv", ".git", ".venv"]

[tool.ruff]
line-length = 120 # Maximum line length - 88 is too short IMO

[tool.ruff.lint]
ignore = [
	"E731", # The assigned lambdas are clearer than the alternative where used. (Simpler to read and understand due to the simple nature of the code in the lambdas)
	"UP007", # Use `X | Y` for type annotations
	"UP038", # Use `X | Y` in `isinstance` call instead of `(X, Y)` (I prefer the tuple syntax, it's easier to read and cheaper than the bitwise OR)
	"RUF006", # Store a reference to the return value of `asyncio.create_task` (I don't want to store the reference)
]
extend-select = [
	"UP",  # pyupgrade
	"I",   # isort
	"PT",  # flake8-pytest-style
	"C4",  # flake8-comprehensions
	"LOG", # flake8-logging
	"G",   # flake8-logging-format
	"SIM", # flake8-simplify
	"RUF", # ruff
]

[tool.ruff.lint.per-file-ignores]
"**/tictactoe/*" = [
	"E741" # Ambiguous variable name 'O' (Not ambiguous in this context)
]
"**/tests/*" = [
	"SIM300" # Yoda condition detected (I don't care about Yodas in tests)
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.isort]
known-local-folder = ["backup", "main", "card", "tictactoe", "sudoku", "shrugman", "bot", "errors"]
lines-after-imports = 2
