[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charbot"
description = "A simple Discord bot written in Python and Rust"
readme = "README.md"
version = "1.7.0"
authors = [
	{name = "Bluesy1", email = "68259537+Bluesy1@users.noreply.github.com"}
]
license = "MIT"
requires-python = ">=3.13"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Rust",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Typing :: Typed",
]
dependencies = [
	"asyncpg==0.31.0",
	"discord.py[speed]==2.6.4",
	"jishaku[procinfo]==2.6.3",
	"niquests[speedups]==3.15.2",
	"orjson==3.11.4",
	"Pillow==12.0.0",
	"pytesseract==0.3.13",
	"sentry-sdk==2.28.0",
	"typing-extensions==4.15.0",
	"tzdata==2025.2",
	"urlextract==1.9.0",
	"uvloop==0.22.1 ; sys_platform != 'win32'",
	"validators==0.29.0",
]

[project.optional-dependencies]
dev = [
	"aioresponses==0.7.8",
	"asyncpg-stubs==0.31.0",
	"ruff==0.11.7",
	"pre-commit==3.6.1",
	"pyright==1.1.400",
	"pytest==9.0.1",
	"pytest-asyncio==1.3.0",
	"pytest-mock==3.15.1",
	"toml==0.10.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "8.3.4"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
filterwarnings = [
	"error",
	"ignore::ResourceWarning",
	"ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16:DeprecationWarning",
	"ignore:'asyncio.AbstractEventLoopPolicy' is deprecated and slated for removal in Python 3.16:DeprecationWarning",
]

[tool.pyright]
pythonPlatform = "Linux"
reportUnnecessaryTypeIgnoreComment = true
reportIncompatibleMethodOverride = false
exclude = ["**/__pycache__/**", "venv", ".git", ".venv"]

[tool.ruff]
line-length = 120 # Maximum line length - 88 is too short IMO

[tool.ruff.lint]
ignore = [
	"E731", # The assigned lambdas are clearer than the alternative where used. (Simpler to read and understand due to the simple nature of the code in the lambdas)
	"UP007", # Use `X | Y` for type annotations
	"RUF006", # Store a reference to the return value of `asyncio.create_task` (I don't want to store the reference)
	"RUF022", "RUF023",  # __all__ and __slots__ sorting
	"SIM105", # No cost exception handling (I don't like contextlib.suppress in most cases)
]
extend-select = [
	"UP",  # pyupgrade
	"I",   # isort
	"PT",  # flake8-pytest-style
	"C4",  # flake8-comprehensions
	"LOG", # flake8-logging
	"G",   # flake8-logging-format
	"SIM", # flake8-simplify
	"RUF", # ruff
]

[tool.ruff.lint.per-file-ignores]
"**/tictactoe/*" = [
	"E741" # Ambiguous variable name 'O' (Not ambiguous in this context)
]
"**/tests/*" = [
	"SIM300" # Yoda condition detected (I don't care about Yodas in tests)
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.isort]
known-local-folder = ["backup", "main", "card", "tictactoe", "sudoku", "shrugman", "bot", "errors"]
lines-after-imports = 2
