[package]
name = "charbot_rust"
version = "1.5.0"
edition = "2021"

[package.metadata.maturin]
name = "charbot_rust._charbot_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "charbot_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2" }
rand = "0.8.5"
image = "0.24.9"
imageproc = "0.23.0"
fluent = { git = "https://github.com/projectfluent/fluent-rs", rev = "a2cef6bff4885623f638a6968e034ce1a296ba01", version="0.16.0" }
encoding = "0.2.33"

[dev-dependencies]
yare = "3.0.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
