[package]
name = "charbot_rust"
version = "1.5.0"
edition = "2024"

[package.metadata.maturin]
name = "charbot_rust._charbot_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "charbot_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4" }
rand = "0.9.0"
image = "0.25.5"
imageproc = "0.25.0"

[dev-dependencies]
yare = "3.0.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
