# SPDX-FileCopyrightText: 2022 Bluesy1 <68259537+Bluesy1@users.noreply.github.com>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "charbot_rust"
requires-python = ">=3.10"
authors = [{name = "Bluesy1", email = "68259537+Bluesy1@users.noreply.github.com"}]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.black]
line-length = 120

[tool.maturin]
python-source = "python"
