# SPDX-FileCopyrightText: 2022 Bluesy1 <68259537+Bluesy1@users.noreply.github.com>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["maturin>=0.15,<0.16"]
build-backend = "maturin"

[project]
name = "charbot_rust"
version = "1.4.1a0"
description = "A Rust library for the Charbot Discord bot"
requires-python = ">=3.10"
authors = [{name = "Bluesy1", email = "68259537+Bluesy1@users.noreply.github.com"}]
license = {name= "MIT", file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"Typing :: Typed",
]

[tool.black]
line-length = 120

[tool.maturin]
python-source = "python"
module-name = "charbot_rust._charbot_rust"
